# giulia

./: CMakeLists.txt  README.md  imgui.ini
src/app/: CMakeLists.txt  data_def.hpp  giulia.cpp  gl_test.cpp  glfw_test.cpp  hello.cpp  process_multi_array.cpp  renderer.cpp  renderer.hpp  sdl_test.cpp  version.h.in  window_exceptions.hpp  window_handler.cpp  window_handler.hpp
src/cl/: CMakeLists.txt  clutils.cpp  clutils.hpp  hello.cl
src/cl/kernels/: array.cl  fractal.cl  multiarray.cl
src/gl/: CMakeLists.txt  glutils.cpp  glutils.hpp
src/gl/shaders/: basic.shader  double_precision.shader  double_precision_low_res.shader  pointer.shader  single_precision.shader  texture.shader
src/utils/: log.hpp
